Fix jumbotron images on mobile

--- a/src/_sass/pages/home.scss
+++ b/src/_sass/pages/home.scss
@@ -1,6 +1,7 @@
 .jumbotron-home {
   background-color: white !important;
   padding: 100px !important;
+  height: 100vh;
 
   h1, h2, h3, h4, h5, h6 {
     color: #222222;
